:tada: Add PullRequestTrigger controller
