# docs/swagger.yaml
@@ -308,6 +308,27 @@ definitions:
           +optional
         type: string
     type: object
+  v1beta1.ConfigPullRequest:
+    properties:
+      components:
+        items:
+          $ref: '#/definitions/v1beta1.PullRequestComponent'
+        type: array
+      parallel:
+        description: |-
+          Parallel defines a parallel number of pull request queue
+          +optional
+        type: integer
+      resources:
+        description: |-
+          Resources represents how many resources of pull request namespace
+          +optional
+        type: string
+      trigger:
+        $ref: '#/definitions/v1beta1.PullRequestTriggerConfig'
+        description: +optional
+        type: object
+    type: object
   v1beta1.ConfigReporter:
     properties:
       cmd:
@@ -368,6 +389,12 @@ definitions:
         items:
           type: string
         type: array
+      pullRequest:
+        $ref: '#/definitions/v1beta1.ConfigPullRequest'
+        description: |-
+          PullRequest represents configuration about pull request
+          +optional
+        type: object
       report:
         $ref: '#/definitions/v1beta1.ConfigReporter'
         description: |-
@@ -505,6 +532,63 @@ definitions:
       excludeWeekendCalculation:
         description: +optional
         type: boolean
+    type: object
+  v1beta1.PullRequestComponent:
+    properties:
+      chart:
+        $ref: '#/definitions/v1beta1.ComponentChart'
+        description: Chart defines a chart repository, name and version of pull request
+          component
+        type: object
+      dependencies:
+        description: |-
+          Dependencies defines a list of components which are required to be deployed together with the main component
+          +optional
+        items:
+          type: string
+        type: array
+      image:
+        $ref: '#/definitions/v1beta1.ComponentImage'
+        description: |-
+          Image defines an image repository, tag and pattern of pull request component which is a regex of tag
+          +optional
+        type: object
+      name:
+        description: Name defines a main component name which is deployed per pull
+          request
+        type: string
+      parallel:
+        description: |-
+          Parallel defines a parallel number of pull request queue
+          +optional
+        type: integer
+      resources:
+        description: |-
+          Resources represents how many resources of pull request namespace
+          +optional
+        type: string
+      source:
+        description: |-
+          Source defines a source for image repository
+          +optional
+        type: string
+      trigger:
+        $ref: '#/definitions/v1beta1.PullRequestTriggerConfig'
+        description: +optional
+        type: object
+    type: object
+  v1beta1.PullRequestTriggerConfig:
+    properties:
+      maxRetry:
+        description: |-
+          MaxRetry defines max retry counts of pull request trigger if cannot find image in the registry
+          +optional
+        type: integer
+      pollingTime:
+        description: |-
+          PollingTime defines a waiting duration time to re-check the pull request image in the registry
+          +optional
+        type: string
     type: object
   v1beta1.Queue:
     properties:
@@ -971,6 +1055,15 @@ definitions:
       teamName:
         type: string
     type: object
+  webhook.pullRequestWebhookEventJSON:
+    properties:
+      component:
+        type: string
+      pullRequestNumber:
+        type: string
+      tag:
+        type: string
+    type: object
   webhook.teamActivePromotion:
     properties:
       current:
@@ -1381,6 +1474,37 @@ paths:
       summary: get team configuration
       tags:
       - GET
+  /teams/{team}/pullrequest/queue:
+    post:
+      consumes:
+      - application/json
+      description: Endpoint for manually triggering pull request deployment
+      parameters:
+      - description: Pull Request
+        in: body
+        name: pullRequestWebhookEventJSON
+        required: true
+        schema:
+          $ref: '#/definitions/webhook.pullRequestWebhookEventJSON'
+          type: object
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+          schema:
+            type: string
+        "400":
+          description: Invalid JSON
+          schema:
+            $ref: '#/definitions/webhook.errResp'
+        "500":
+          description: Internal Server Errors
+          schema:
+            $ref: '#/definitions/webhook.errResp'
+      summary: Webhook For Pull Request Deployment
+      tags:
+      - POST
   /teams/{team}/queue:
     get:
       description: Returns queue information of new component upgrading flow.
