# internal/samsahai/webhook/router.go
@@ -3,7 +3,6 @@ package webhook
 import (
 	"encoding/json"
 	"fmt"
-	"io/ioutil"
 	"net/http"
 	"strconv"
 
@@ -57,6 +56,8 @@ func (h *handler) bind(r *httprouter.Router) {
 	r.GET("/teams/:team/activepromotions/histories", h.getTeamActivePromotionHistories)
 	r.GET("/teams/:team/activepromotions/histories/:history", h.getTeamActivePromotionHistory)
 	r.GET("/teams/:team/activepromotions/histories/:history/log", h.getTeamActivePromotionHistoryLog)
+
+	r.POST("/teams/:team/pullrequest/queue", h.pullRequestWebhook)
 
 	r.GET("/activepromotions", h.getActivePromotions)
 
@@ -172,48 +173,4 @@ func (h *handler) errorf(w http.ResponseWriter, statusCode int, format string, a
 		Error: fmt.Sprintf(format, args...),
 	}
 	h.JSON(w, statusCode, v)
-}
-
-func (h *handler) readRequestBody(w http.ResponseWriter, r *http.Request) ([]byte, error) {
-	data, err := ioutil.ReadAll(r.Body)
-	if err != nil {
-		logger.Error(err, "cannot read from req.body")
-		h.error(w, http.StatusInternalServerError, s2herrors.ErrInternalError)
-		return nil, err
-	}
-	return data, nil
-}
-
-type newComponentEventJSON struct {
-	TeamName   string `json:"teamName,omitempty"`
-	Component  string `json:"component"`
-	Repository string `json:"repository,omitempty"`
-}
-
-// newComponentWebhook godoc
-// @Summary Webhook New Component
-// @Description Endpoint for manually triggering new component update
-// @Tags POST
-// @Accept  json
-// @Produce  json
-// @Param newComponentEventJSON body webhook.newComponentEventJSON true "New Component"
-// @Success 204 {string} string
-// @Failure 400 {object} errResp "Invalid JSON"
-// @Router /webhook/component [post]
-func (h *handler) newComponentWebhook(w http.ResponseWriter, r *http.Request, params httprouter.Params) {
-	data, err := h.readRequestBody(w, r)
-	if err != nil {
-		return
-	}
-
-	var jsonData newComponentEventJSON
-	err = json.Unmarshal(data, &jsonData)
-	if err != nil {
-		h.error(w, http.StatusBadRequest, s2herrors.ErrInvalidJSONData)
-		return
-	}
-
-	h.samsahai.NotifyComponentChanged(jsonData.Component, jsonData.Repository, jsonData.TeamName)
-
-	w.WriteHeader(http.StatusNoContent)
 }
